# ckb-native-build-sample

./: .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
contracts/atomics-without-a/: Cargo.toml  Makefile  build.rs
contracts/atomics-without-a/src/: main.rs
contracts/legacy-c-dependency/: Cargo.toml  Makefile
contracts/legacy-c-dependency/src/: main.rs
contracts/loads-of-hashes/: Cargo.toml  Makefile
contracts/loads-of-hashes/src/: main.rs
contracts/minimal-log/: Cargo.toml  Makefile
contracts/minimal-log/src/: main.rs
contracts/stack-reorder/: Cargo.toml  Makefile  build.rs
crates/big-cell-fetcher/: Cargo.toml
crates/big-cell-fetcher/src/: lib.rs
crates/big-witness-hasher/: Cargo.toml  build.rs  c.c
crates/big-witness-hasher/src/: lib.rs
docker/: bookworm.dockerfile
tests/: Cargo.toml
tests/src/: tests.rs
