[package]
name = "atomics-without-a"
description = "A sample showing how to use Rust's atomic builtins without A extension"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.15.0"
log = { version = "0.4.20", default-features = false }
bytes = { version = "1.5.0", default-features = false }

[build-dependencies]
cc = "1.0"
