[package]
name = "legacy-c-dependency"
description = "A Rust contract dealing with legacy GNU-style crate dependency including C code"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { git = "https://github.com/xxuejie/ckb-std", rev = "5227ce2", features = [ "build-with-clang" ] }
blake2b-rs = "0.2.0"
