[package]
name = "legacy-c-dependency"
description = "A Rust contract dealing with legacy GNU-style crate dependency including C code"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { git = "https://github.com/quake/ckb-std", branch = "quake/libc", features = [ "build-with-clang" ] }
blake2b-rs = "0.2.0"
