[package]
name = "stack-reorder"
description = "A Rust contract that has stack reordered at lower address"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { git = "https://github.com/xxuejie/ckb-std", rev = "5227ce2", features = [ "build-with-clang" ] }

[build-dependencies]
cc = "1.0"
